--- a/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
+++ b/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
 	<AssemblyVersion>1.1.40.0</AssemblyVersion>
 	<FileVersion>1.1.40.0</FileVersion>
+	<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
