--- a/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
+++ b/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
@@ -10,8 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Webhook\**" />
     <Compile Remove="Validators\**" />
+    <EmbeddedResource Remove="Models\Webhook\**" />
     <EmbeddedResource Remove="Validators\**" />
+    <None Remove="Models\Webhook\**" />
     <None Remove="Validators\**" />
   </ItemGroup>
 
@@ -22,10 +25,6 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Webhook\" />
   </ItemGroup>
 
 </Project>
