--- a/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
+++ b/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
 	<PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
+	<PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="LanguageExt.Core" Version="4.4.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
