Account identifier currency

--- a/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
+++ b/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Quartz" Version="3.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Extensions\AccountIdentifierExtensions.cs" />
+  </ItemGroup>
+
 </Project>
