Added rule deserialisation test.

--- a/test/MoneyMoov.UnitTests/MoneyMoov.UnitTests.csproj
+++ b/test/MoneyMoov.UnitTests/MoneyMoov.UnitTests.csproj
@@ -26,6 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\moneymoovapi\src\NoFrixion.Biz\NoFrixion.Biz.csproj" />
 		<ProjectReference Include="..\..\src\NoFrixion.MoneyMoov\NoFrixion.MoneyMoov.csproj" />
 	</ItemGroup>
 
