--- a/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
+++ b/src/NoFrixion.MoneyMoov/NoFrixion.MoneyMoov.csproj
@@ -16,12 +16,14 @@
         <PackageReference Include="CsvHelper" Version="33.0.1" />
         <PackageReference Include="IdentityModel" Version="7.0.0" />
         <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.2" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Quartz" Version="3.13.1" />
+        <PackageReference Include="System.Text.Encodings.Web" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
