--- a/test/MoneyMoov.IntegrationTests/MoneyMoov.IntegrationTests.csproj
+++ b/test/MoneyMoov.IntegrationTests/MoneyMoov.IntegrationTests.csproj
@@ -7,6 +7,7 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 		<IsPackable>false</IsPackable>
 		<UserSecretsId>392ada34-d652-4565-a1ec-e397809ca36b</UserSecretsId>
+		<NoWarn>$(NoWarn);NU1902;NU1903;</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
