--- a/test/MoneyMoov.UnitTests/MoneyMoov.UnitTests.csproj
+++ b/test/MoneyMoov.UnitTests/MoneyMoov.UnitTests.csproj
@@ -6,6 +6,7 @@
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+		<NoWarn>$(NoWarn);NU1902;NU1903;</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
